# ProxPatch

./: CHANGELOG.md  README.md
.changelogs/0.1.0/: 5-create-first-beta-release.yml  release_meta.yaml
.changelogs/0.1.3/: 10-fix-logger-reinitialization.yml  12-fix-unknown-variants-in-pve.yml  13-fix-config-file-eval.yml  14-allow-node-exclusion.yml  fix-initializing-with-default-values.yml  release_meta.yaml
.changelogs/0.1.4/: 23-add-maintenance-support.yml  3-add-ceph-maintenance-support.yml
.github/workflows/: 10-pipeline-build-deb-package.yml
debian/: changelog  control  install
docs/: 01_architecture.md  02_installation.md  03_configuration.md
proxpatch/: Cargo.toml
proxpatch/src/: calculations.rs  cli.rs  cluster.rs  config.rs  helpers.rs  logging.rs  main.rs  migrate.rs  models.rs  nodes.rs  patch.rs  utils_ceph.rs  utils_proxlb.rs  version.rs  vms.rs
systemd/: proxpatch.service
