[package]
name = "proxpatch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
systemd-journal-logger = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"